[gd_scene load_steps=14 format=2]

[ext_resource path="res://player.gd" type="Script" id=1]
[ext_resource path="res://Resources/hero_D0.png" type="Texture" id=2]
[ext_resource path="res://weapon.tscn" type="PackedScene" id=3]
[ext_resource path="res://Resources/hero_D1.png" type="Texture" id=4]
[ext_resource path="res://Resources/hero_U0.png" type="Texture" id=5]
[ext_resource path="res://Resources/hero_S1.png" type="Texture" id=6]
[ext_resource path="res://Resources/hero_U1.png" type="Texture" id=7]
[ext_resource path="res://Resources/hero_SA.png" type="Texture" id=8]
[ext_resource path="res://Resources/hero_S0.png" type="Texture" id=9]
[ext_resource path="res://Resources/hero_DA.png" type="Texture" id=10]
[ext_resource path="res://Resources/hero_UA.png" type="Texture" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40, 51 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 7 ) ],
"loop": true,
"name": "walkUp",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "attackDown",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "attackSide",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 4 ) ],
"loop": true,
"name": "walkDown",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "attackUp",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 6 ) ],
"loop": true,
"name": "walkSide",
"speed": 5.0
} ]

[node name="Player" type="Area2D"]
gravity_vec = Vector2( 0, 0 )
script = ExtResource( 1 )

[node name="HurtBox" type="CollisionShape2D" parent="."]
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 1 )
disabled = true

[node name="Weapon" parent="." instance=ExtResource( 3 )]

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="AttackCD" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 4, 4 )
z_index = 3
frames = SubResource( 2 )
animation = "attackUp"
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="AttackCD" to="." method="_on_AttackCD_timeout"]
